--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Delemangi" />
+    <meta name="description" content="Delemangi is a software engineer." />
+
+    <meta property="og:title" content="Delemangi" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://delemangi.com" />
+    <meta property="og:description" content="Software engineer and self proclaimed code monkey." />
+
     <title>Delemangi</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+
 </html>
