--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Delemangi" />
     <meta name="description" content="Delemangi is a software engineer." />
@@ -20,6 +23,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" as="style"
+      onload="this.onload=null; this.rel='stylesheet'; document.body.classList.add('fontLoaded')" />
   </body>
 
 </html>
