--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="description" content="Delemangi is a software engineer." />
 
     <meta property="og:title" content="Delemangi" />
+    <meta property="og:site_name" content="Delemangi" />
+    <meta property="og:image" content="/page.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://delemangi.com" />
     <meta property="og:description" content="Software engineer and self proclaimed code monkey." />
