--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Delemangi" />
     <meta name="description" content="Delemangi is a software engineer." />
+    <meta name="twitter:card" content="summary_large_image">
 
     <meta property="og:title" content="Delemangi" />
     <meta property="og:site_name" content="Delemangi" />
