Update meta property

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="https://delemangi.com/page.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://delemangi.com" />
-    <meta property="og:description" content="Software engineer and self proclaimed code monkey." />
+    <meta property="og:description" content="Software Engineer & Professional Code Monkey" />
 
     <title>Delemangi</title>
   </head>
