--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="Delemangi" />
     <meta property="og:site_name" content="Delemangi" />
-    <meta property="og:image" content="https://delemangi.com/page.png" />
+    <meta property="og:image" content="https://delemangi.com/index.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://delemangi.com" />
     <meta property="og:description" content="Software Engineer & Professional Code Monkey" />
